fix: prevent logo wrapping in older browsers

--- a/christmas-shop/src/components/header/header.scss
+++ b/christmas-shop/src/components/header/header.scss
@@ -27,7 +27,6 @@
 
   &__logo-text {
     color: $color-dark;
-    text-wrap: nowrap;
   }
 
   &__burger-button {
