--- a/christmas-shop/src/components/section-gifts/section-gifts.scss
+++ b/christmas-shop/src/components/section-gifts/section-gifts.scss
@@ -70,7 +70,6 @@
     padding: 0.75rem 0.5rem;
 
     color: $color-static-white;
-    text-wrap: nowrap;
 
     border-radius: 12px;
 
